# GUIMaker

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md  codegen.md  contributing.md  keybindings.md  roadmap.md  widgets.md
src/: codegen.rs  main.rs  model.rs  properties.rs  scene.rs  toolbox.rs
src/panels/: canvas.rs  hierarchy_panel.rs  left_panel.rs  mod.rs  right_panel.rs  settings.rs  top_bar.rs  widget_editor.rs
src/panels/widgets/: button.rs  generic.rs  label.rs  label_align.rs  mod.rs  shared.rs
